--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hexlet frontend project</title>
+        <script defer="defer" src="main.js"></script>
+        <link href="main.css" rel="stylesheet">
     </head>
     <body>
         <section class="container-fluid bg-dark p-5">
