--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hexlet frontend project</title>
-        <script defer="defer" src="main.js"></script>
-        <link href="main.css" rel="stylesheet">
+        <title>Hexlet frontend project by Denis Karnafel</title>
     </head>
     <body>
         <section class="container-fluid bg-dark p-5">
@@ -26,7 +24,7 @@
                             </div>
                         </div>
                     </form>
-                    <p class="mt-2 mb-0 text-muted">Пример: https://lorem-rss.hexlet.app/feed</p>
+                    <p class="mt-2 mb-0 text-secondary">Пример: https://lorem-rss.hexlet.app/feed</p>
                     <p class="feedback m-0 position-absolute small text-danger"></p>
                 </div>
             </div>
